--- a/server/hw1_server/pom.xml
+++ b/server/hw1_server/pom.xml
@@ -24,5 +24,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.29</version>
 		</dependency>
+		<dependency>
+		   <groupId>org.neo4j</groupId>
+		   <artifactId>neo4j</artifactId>
+		   <version>2.1.7</version>
+		</dependency>
 	</dependencies>
 </project>
